Change log for zeit.web
=======================

1.63.4 (unreleased)
-------------------

- MAINT: Polish headline of following pages


1.63.3 (2015-09-04)
-------------------

- ZON-2160: Render links from entity tag


1.63.2 (2015-09-04)
-------------------

- DEV-923: Use image variant specified on the layout for article images

- MAINT: Polish comment count styles

- FIX: Fix another layout breaking banner between 720 and 768px in ZMO


1.63.1 (2015-09-03)
-------------------

- FIX: Fix wrong layout for MR7 and 8 in ZMO


1.63 (2015-09-03)
-----------------

- ZON-1960: Adcontroller for ZMO

- ZON-2053: Resort and collapse comment replies

- MAINT: Polish comments preferences and parquet topic links

- FIX: Provide additional fallback for teaser images


1.62 (2015-09-02)
-----------------

- ZON-2062: Migrate video and sharinge images to new image server

- ZON-2080: Hide cp2015 ending in sharing data

- ZON-2002: Include cards from espi-be via esi

- ZON-1592: Label "Verlagsangebote"

- ZON-2064: Kommentarezahl Artikel oben

- FIX: Fix SASS mixin for rem values


1.61.1 (2015-08-27)
-------------------

- ZON-1591: Allow app-content mode for staging environment


1.61 (2015-08-27)
-----------------

- ZON-1591: Wrapper functionality for mobile apps

- MAINT: Polish square teaser, topic teaser, column byline and button

- ZON-2034: Bring back images for dynamic ranking areas

- ZON-2129: integrate former noindex rules from XSLT

- ZON-1968: Add Iframe 50/50 Teaser

- ZON-2058: Reposition comment recommendations

- ZON-2052: Enable DNS Prefetch for assets

- ZON-2050: Do not load hidden images

- ZON-2011: Use default style/template on column teaser and article
  if there is no author image

- FIX: iqd sitebar should not again be seen on mobile

- ZON-2079: extend schema.org for videos


1.60.0 (2015-08-24)
-------------------

- ZON-2116: Add javascript object for wrapper apps

- ZON-2076: Move h1 to teasertext of paginated articles,