@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - MAINT: Polish headline of following pages
 
+- ZON-2179: Redirect on cp2015 suffix
+
 
 1.63.3 (2015-09-04)
 -------------------
